focus groep aanpassingen subtitles, tijdnotatie etc

--- a/ns-demo/index-focus-groep.html
+++ b/ns-demo/index-focus-groep.html
@@ -77,9 +77,9 @@
       <!-- =================================== AVATAR 0 COLUMN =================================== -->
       <div class="col-sm pr-2">
           <span class="CWASAAvatar av0" id="avatar"></span>
-          <input class="av0 subtitlesRep0 col-mb-5" id="repetitionBar_av0" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
+          <input class="av0 subtitlesRep col-mb-5" id="repetitionBar_av0" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
           <div class="av0 subtitlesLong col-mb-5" id="outputLong" style="display: none"></div>
-          <input class="av0 txtGloss subtitles0 col-mb-5" id="outputGloss" value="" type="text" readonly="readonly" style="display: block"></input>
+          <input class="av0 txtGloss subtitles col-mb-5" id="outputGloss" value="" type="text" readonly="readonly" style="display: block"></input>
           <br>
           <input type="button" class="btn btn-primary" id="play_av0" value="Play" onclick='makePlayNonClickable(0); getSentenceArray(document.getElementById("currSentence_av0").innerText, 0);'/>
           <input type="button" class="bttnStop btn btn-primary" value="Stop" onclick='makePlayClickable(0)'/>
@@ -198,8 +198,8 @@
        <!-- =================================== AVATAR 1 COLUMN =================================== -->
         <div class="col-sm pr-2">
             <span class="CWASAAvatar av1" id="avatar"></span>
-            <input class="av1 subtitlesRep0 col-mb-5" id="repetitionBar_av1" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
-            <input class="av1 txtGloss subtitles0 col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
+            <input class="av1 subtitlesRep col-mb-5" id="repetitionBar_av1" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
+            <input class="av1 txtGloss subtitles col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
             <br>
             <input type="button" class="btn btn-primary" id="play_av1" value="Play" onclick='makePlayNonClickable(1); getSentenceArray(document.getElementById("currSentence_av1").innerText, 1);'/>
             <input type="button" class="bttnStop btn btn-primary" value="Stop" onclick='makePlayClickable(1)'/>
@@ -318,9 +318,9 @@
       <!-- =================================== AVATAR 2 COLUMN =================================== -->
       <div class="col-sm">
         <span class="CWASAAvatar av2" id="avatar"></span>
-        <input class="av2 subtitlesRep0 col-mb-5" id="repetitionBar_av2" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
+        <input class="av2 subtitlesRep col-mb-5" id="repetitionBar_av2" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
         <div class="av0 subtitlesLong col-mb-5" id="outputLong_nocurrent" style="display: none"></div>
-        <input class="av2 txtGloss subtitles0 col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
+        <input class="av2 txtGloss subtitles col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
         <br>
         <input type="button" class="btn btn-primary av2" id="play_av2" value="Play" onclick='makePlayNonClickable(2); getSentenceArray(document.getElementById("currSentence_av2").innerText, 2);'/>
         <input type="button" class="bttnStop btn btn-primary" value="Stop" onclick='makePlayClickable(2)'/>
