--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -74,7 +74,7 @@
   <div class="container-fluid" id="avatarTranslator" style="width: 100%;">
     <!-- Challenge Row-->
     <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-      <div class="col-12" style="font-size: larger; background-color: rgb(241, 205, 205);">WORK IN PROGRESS, PLEASE DO NOT SHARE</div>
+      <!--<div class="col-12" style="font-size: larger; background-color: rgb(241, 205, 205);">WORK IN PROGRESS, PLEASE DO NOT SHARE</div>-->
       <br><br>
       <!-- Column for info -->
       <div class="col-12 col-md-5">
@@ -85,7 +85,8 @@
                 <span class="CWASAAvatar av0" id="avatar"></span>
                     <!--<input class="av0 subtitles col-mb-5" id="outputSentence" value="" type="text" readonly="readonly"></input>-->
                     <input class="av0 subtitlesRep col-mb-5" id="repetitionBar" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
-                    <input class="av0 txtGloss subtitles col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
+                    <div class="av0 subtitlesLong col-mb-5" id="outputLong" style="display:inline-block"></div>
+                    <!--<input class="av0 txtGloss subtitles col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>-->
                     <br>
                     <input type="button" class="btn btn-primary" id="play" value="Play" onclick='makePlayNonClickable(); getSentenceArray(document.getElementById("currSentence").innerText, "alertMainTran");'/>
                     <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML(); makePlayClickable();' />
@@ -117,12 +118,11 @@
             <label id="selectExplain" for="inputLanguageForm" class="col-sm col-form-label"></label>
               <div class="col-sm">
                 <select id="inputLanguageForm" class="form-select" onchange="changeLanguage(this.value);" style="margin-bottom: 0px; max-width: 200px;">
-                  <option value="English">English</option>
-                  <option selected value="Nederlands">Nederlands</option>
+                  <option selected value="English">English</option>
+                  <option value="Nederlands">Nederlands</option>
                 </select>
               </div>
           </div>
-                    
                    
           <hr>
           <div class="mb-3 row align-items-start no-gutters">
