--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -55,13 +55,14 @@
 
 <div id="pwdAlert"></div>
 
-<div id="checkPage">
+<!-- Old password check -->
+<!-- <div id="checkPage">
   <div style="display: flex; justify-content: center; align-items: center; height: 100%; text-align: center; color: white;">
    <label for="pwd" style="display: inline-block; text-align: center;">Password: </label>
    <input type="password" id="pwd" style="display: inline-block; margin-right: 5px; margin-left: 5px;" onkeydown="if(event.keyCode == 13){event.preventDefault();compare(document.getElementById('pwd').value);}">
    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </div>
-</div>
+</div> -->
 
 <!-- Navigation-->
 <div id="nav-placeholder"></div>
