Updated website to be more current

--- a/index.html
+++ b/index.html
@@ -96,16 +96,17 @@
                     <p class="mb-4">
                       We investigate the structure of signs and signed sentences, paying special attention to cross-modal and intra-modal variation and similarities. That is, sign language structures are not only compared to structures identified for spoken languages, but sign languages are also compared to each other, in an effort to determine in how far the modality of signal transmission impacts grammatical structures.
                     </p>
-                    <h5>Breaking language barriers</h5>
+                    <h5>Applications</h5>
                     <p class="mb-4">
                       Scientific investigation of sign languages is not only necessary to obtain a general understanding of human languages, but also to diminish the
                       <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">communication barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters, to develop efficient curricula for sign language learners including hearing parents of deaf children, and to lay a foundation for sign language technology.
                     </p>
                     <p class="mb-4">
-                      We are currently developing a
-						          <b><a href="covid19/index.html" target="_blank">
-                        machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>.
-                      In the future, we intend to develop several other applications, for instance to translate announcements at train stations and airports, and to support hearing parents of deaf children in learning sign language.
+                      We have developed a machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19. On the basis of the same technology, we have developed a sign language avatar for railway announcements. For more information, visit our <b><a href="covid19/translate.html" target="_blank">avatar translation</a></b> page.
+                      <!-- Rename avatar translation to applications? -->
+						          <!-- <b><a href="covid19/index.html" target="_blank">
+                        machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>. Moreover, we have developed a  -->
+                      In the future, we intend to develop several other applications, for instance to translate announcements at airports, and to support hearing parents of deaf children in learning sign language.
                     </p>
                 </div>
             </div>
