made pages more uniform

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                       <a href="https://nl.wikipedia.org/wiki/Bernard_Tervoort" target="_blank">Bernard Tervoort</a> in the 1950's,
                       with recent advances in artificial intelligence.
                     </p>
+                    <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
 
                     <h5>Sign language linguistics</h5>
                     <p class="mb-4">
@@ -96,6 +97,7 @@
                     <p class="mb-4">
                       We investigate the structure of signs and signed sentences, paying special attention to cross-modal and intra-modal variation and similarities. That is, sign language structures are not only compared to structures identified for spoken languages, but sign languages are also compared to each other, in an effort to determine in how far the modality of signal transmission impacts grammatical structures.
                     </p>
+                    <hr class="d-none d-lg-block mb-5 ml-0" />
                     <h5>Applications</h5>
                     <p class="mb-4">
                       Scientific investigation of sign languages is not only necessary to obtain a general understanding of human languages, but also to diminish the
@@ -108,6 +110,7 @@
                         machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>. Moreover, we have developed a  -->
                       In the future, we intend to develop several other applications, for instance to translate announcements at airports, and to support hearing parents of deaf children in learning sign language.
                     </p>
+                    <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
             </div>
 
