--- a/people.html
+++ b/people.html
@@ -74,9 +74,9 @@
 
 
             <!-- Column for team -->
-            <div class="col-12 col-md order-2 ml-md-5">
+            <div class="col-12 col-md order-2">
                 <!-- Team -->
-                <div class="project-text text-left textDIV">
+                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
 
 
                     <h5>Principal investigators</h5>
