Minor changes to website, added disclaimer to demos

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">communication barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters, to develop efficient curricula for sign language learners including hearing parents of deaf children, and to lay a foundation for sign language technology.
                     </p>
                     <p class="mb-4">
-                      We have developed a machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19. On the basis of the same technology, we have developed a sign language avatar for railway announcements. For more information, visit our <b><a href="covid19/translate.html" target="_blank">avatar translation</a></b> page.
+                      We have developed a machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19. On the basis of the same technology, we have developed a prototype sign language avatar for railway announcements. For more information, visit our <b><a href="covid19/translate.html" target="_blank">Applications</a></b> page.
                       <!-- Rename avatar translation to applications? -->
 						          <!-- <b><a href="covid19/index.html" target="_blank">
                         machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>. Moreover, we have developed a  -->
