--- a/translate.html
+++ b/translate.html
@@ -73,7 +73,7 @@
                     <p class="mb-4">
                       We are developing tools to translate text into sign language using animated avatars. Such tools have several potential applications. They could support communication between deaf and hearing people in situations where human sign language interpreters cannot be employed, they could give sign language users easier access to written and spoken information, and they could help people in learning sign language.
                     </p>
-                    <h5>Cautionary note</h5>
+                    <!-- <h5>Cautionary note</h5> -->
                     <p>
                       We should emphasise that, to support face-to-face interaction between deaf and hearing people, a qualified human sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed or for purposes other than supporting face-to-face interaction, such as providing access to information or providing support in learning sign language.
                    </p>
@@ -82,11 +82,11 @@
                    <!-- NS -->
                    <h5>A case study: a sign language avatar for railway announcements</h5>
                    <p class="mb-4">
-                     Public transport organisations, such as Dutch railway operator Nederlandse Spoorwegen (NS), generally communicate important messages through spoken announcements in the train or station. As a result, Deaf people miss crucial information. Because of varying levels of reading proficiency, textual information is not always a solution. Moreover, video footage is not scalable and will not yield satisfactory results when individual video parts need an update. Virtual sign language avatars can provide consistent, anonymous and scalable translations. For the development of a comprehensible and fluent sign language avatar, collaboration between experts in language technology, avatar technology and sign language has been fundamental. Click on the button below to see a demo of this tool.
+                     Public transport organisations, such as Dutch railway operator Nederlandse Spoorwegen (NS), generally communicate important messages through spoken announcements in the train or station. As a result, Deaf people miss crucial information. Because of varying levels of reading proficiency, textual information is not always a solution. Moreover, video footage is not scalable and will not yield satisfactory results when individual video parts need an update. Virtual sign language avatars can provide consistent, anonymous and scalable translations. For the development of a comprehensible and fluent sign language avatar, collaboration between experts in language technology, avatar technology and sign language has been fundamental. Click on the button below or on the image of the avatar to see a demo of this tool.
                    </p>
                    <div class="mb-4">
                      <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
-                     <a class="btn btn-primary" href="ns-demo/index.html" role="button">Go to railway announcements demo</a>
+                     <a class="btn btn-primary" href="ns-demo/index.html" target="_blank" role="button">Go to railway announcements demo</a>
                    </div>
                    <hr class="d-none d-lg-block mb-5 ml-0" />
 
@@ -97,13 +97,8 @@
                     </p>
                     <div class="mb-4">
                       <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
-                      <a class="btn btn-primary" href="healthcare-demo.html" role="button">Go to healthcare demo</a>
+                      <a class="btn btn-primary" href="healthcare-demo.html" target="_blank" role="button">Go to healthcare demo</a>
                     </div>
-                   <h6><b>Additional resources for healthcare professionals</b></h6>
-                   <p>
-                     Useful advice for health care professionals about communicating with deaf patients can be found on the
-                     <a href="https://www.wattelt.org/corona/" target="_blank">Wat Telt!</a> website. This website also contains a video teaching you fifteen signs that could help you in communicating with deaf patients. Would you like to learn more? Sign up for a <b><a href="https://www.rino.nl/cursus/hulpverlening-dove-en-slechthorende-patinten" target="_blank">two-day course on providing assistance to deaf and hard of hearing patients at RINO</a></b>. This course is taught by Dr. Anika Smeijers (Amsterdam Medical Centre), Prof. Onno Crasborn (Radboud University Nijmegen) and Roos Wattel (<a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a>).
-                   </p>
                    <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
             </div>
@@ -122,9 +117,9 @@
               </div> -->
 
               <!-- filmpje Give me a Sign! -->
-              <div class="embed-responsive embed-responsive-16by9 mt-5">
+              <!-- <div class="embed-responsive embed-responsive-16by9 mt-5">
                 <iframe src="https://www.youtube.com/embed/Jt8hyCPZWr0?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+              </div> -->
 
               <!-- Ns demo -->
               <div class="mt-5">
