Added Raquel, updated navbar and dates in demo disclaimers

--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -62,7 +62,7 @@
   <div id="avatarTranslator" class="container-fluid" style="width: 100%;">
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-          <div class="col-12" style="font-size: larger; background-color: rgb(241, 205, 205);">This demo presents a first prototype which still has many limitations. For more information see <b><a href="publications/TRITON-2021-signlab-Amsterdam.pdf" target="_blank">Roelofsen et al.</a></b></div>
+          <div class="col-12" style="font-size: larger; background-color: rgb(241, 205, 205);">This demo presents a first prototype which still has many limitations. For more information see <b><a href="publications/TRITON-2021-signlab-Amsterdam.pdf" target="_blank">Roelofsen et al. (2021)</a></b></div>
           <br><br>
           <div class="col-12 col-md-1"></div>
 
