--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -77,7 +77,7 @@
   <div class="container-fluid" id="avatarTranslator" style="width: 100%;">
     <!-- Challenge Row-->
     <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-      <div class="col-12" style="font-size: larger; background-color: rgb(241, 205, 205);">This demo presents a first prototype which still has many limitations. For more information see <b><a href="../publications/SLTAT2022Proceedings.pdf" target="_blank">van Gemert et al.</a></b></div>
+      <div class="col-12" style="font-size: larger; background-color: rgb(241, 205, 205);">This demo presents a first prototype which still has many limitations. For more information see <b><a href="../publications/SLTAT2022Proceedings.pdf" target="_blank">van Gemert et al. (2022)</a></b></div>
       <br><br>
       <!-- Column for info -->
       <div class="col-12 col-md-5">
