--- a/people.html
+++ b/people.html
@@ -100,6 +100,7 @@
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning )<br>
                       <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html?cb" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
                       <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (Postdoc)<br>
+                      <a href="https://www.upf.edu/en/web/lsc-lab/entry/-/-/140362/adscripcion/raquel-veiga" target="_blank">Raquel Veiga Busto</a> (Postdoc)<br> 
                       <!-- Marloes Oomen <br> -->
                     </p>
                     <h5>
