people in two columns, removed GIF

--- a/people.html
+++ b/people.html
@@ -100,7 +100,7 @@
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning )<br>
                       <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html?cb" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
                       <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (Postdoc)<br>
-                      <a href="https://www.upf.edu/en/web/lsc-lab/entry/-/-/140362/adscripcion/raquel-veiga" target="_blank">Raquel Veiga Busto</a> (Postdoc)<br> 
+                      <a href="https://www.upf.edu/en/web/lsc-lab/entry/-/-/140362/adscripcion/raquel-veiga" target="_blank">Raquel Veiga Busto</a> (Postdoc)<br>
                       <!-- Marloes Oomen <br> -->
                     </p>
                     <h5>
@@ -119,36 +119,7 @@
                       Merel Atia (Researcher)<br>
                       Roel de jeu (Researcher)<br>
                     </p>
-                    <h5>
-                      PhD alumni
-                    </h5>
-                     <p class="text-black-50 mb-3">
-                      <a href="https://ulrikaklomp.com/" target="_blank"> Ulrika Klomp</a> (2021)<br>
-                      <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (2020)<br>
-                      <a href="https://www.hu.nl/onderzoek/onderzoekers/eveline-boers-visker" target="_blank">Eveline Boers-Visker</a> (2020)<br>
-                    </p>
-                    <h5>
-                      Master and bachelor alumni
-                    </h5>
-                    <p class="text-black-50 mb-1">
-                      <b>2022</b>: Britt van Gemert (MSc AI)<br>
-                    </p>
-                    <p class="text-black-50 mb-1">
-                      <b>2021</b>: Mark van Hofwegen (BSc AI),
-                      Matthijs van de Vijver (BSc AI),
-                      Alon Shilo (BSc AI).<br>
-                    </p>
-                    <p class="text-black-50 mb-3">
-                      <b>2020</b>: Lyke Esselink (BSc AI),
-                      Shani Mende-Gillings (BSc AI),
-                      Judith Corsel (BSc AI),
-                      Jasmijn Bleijlevens (BA University College).<br>
-                      <!-- Bram Smit (2019)<br>
-                      Sander Brinkhuijsen (2019)<br>
-                      Steven de Weille (2019)<br>
-                      Nardi Lam (2018)<br>
-                      Jetske Beks (2018)<br> -->
-                    </p>
+
                     <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
 
 
@@ -166,9 +137,42 @@
                 </div>
             </div>
             <!-- Column for GIF -->
-            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
-             <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
-           </div>
+            <div class="col-12 col-md-5 order-1 order-md-12 text-left ml-md-5">
+             <!-- <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'"> -->
+           <!-- </div> -->
+
+           <!-- <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV"> -->
+
+             <h5>
+               PhD alumni
+             </h5>
+              <p class="text-black-50 mb-3">
+               <a href="https://ulrikaklomp.com/" target="_blank"> Ulrika Klomp</a> (2021)<br>
+               <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (2020)<br>
+               <a href="https://www.hu.nl/onderzoek/onderzoekers/eveline-boers-visker" target="_blank">Eveline Boers-Visker</a> (2020)<br>
+             </p>
+             <h5>
+               Master and bachelor alumni
+             </h5>
+             <p class="text-black-50 mb-1">
+               <b>2022</b>: Britt van Gemert (MSc AI)<br>
+             </p>
+             <p class="text-black-50 mb-1">
+               <b>2021</b>: Mark van Hofwegen (BSc AI),
+               Matthijs van de Vijver (BSc AI),
+               Alon Shilo (BSc AI).<br>
+             </p>
+             <p class="text-black-50 mb-3">
+               <b>2020</b>: Lyke Esselink (BSc AI),
+               Shani Mende-Gillings (BSc AI),
+               Judith Corsel (BSc AI),
+               Jasmijn Bleijlevens (BA University College).<br>
+               <!-- Bram Smit (2019)<br>
+               Sander Brinkhuijsen (2019)<br>
+               Steven de Weille (2019)<br>
+               Nardi Lam (2018)<br>
+               Jetske Beks (2018)<br> -->
+             </p>
 
         </div>
 
